updateCar